Migrations to change string fields to text

--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -5,7 +5,7 @@
 
     .row-fluid
       .span3
-        = f.input :title, placeholder: "Name of article, report or other document"
+        = f.input :title, as: :string, placeholder: "Name of article, report or other document"
       .span3
         = f.input :authors, as: :string, placeholder: "Authors' names, A-Z order"
       .span3
@@ -14,11 +14,11 @@
         = f.input :resource_type,  collection: Resource.resource_types
     .row-fluid
       .span3
-        = f.input :publisher, placeholder: "Who supports this publication?"
+        = f.input :publisher, as: :string, placeholder: "Who supports this publication?"
       .span3.row-fluid
         = f.input :publish_date, as: :date, start_year: 1980, end_year: Date.today.year + 5, input_html: {class: "span4"}
       .span3
-        = f.input :publisher_location, placeholder: "Where is the publisher headquartered?"
+        = f.input :publisher_location, as: :string, placeholder: "Where is the publisher headquartered?"
       .span3
         = f.input :dont_fetch, label: "Don't fetch this resource", hint: "By default, we'll save a copy of this."
     .row-fluid
