--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -109,12 +109,11 @@
                   = link_to "Sign In", signin_path
 
               - if Rails.env.development? 
-                %li{ style: "margin:5px;color:#fcc;font-size:20px" }
+                %li{ style: "margin:5px;color:#f33;font-size:20px" }
                   %strong
                     DEV
-              - if current_user_is_aiddata
-                %li.pull-right
-                  %input#header_search{type: "text", placeholder: "Search the data or find a project..."}
+              %li.pull-right
+                %input#header_search{type: "text", placeholder: "Search the data or find a project..."}
         - if current_user_is_aiddata
           %div.row-fluid
             %nav.span12
