Cleans up js for search bar

--- a/app/views/layouts/_templates.html.haml
+++ b/app/views/layouts/_templates.html.haml
@@ -1,6 +1,6 @@
 
 %script#typeahead_template{type: "text/template"}
-	.row-fluid
+	.row-fluid{"data-target" => "<%= target %>".html_safe}
 
 		%p
 			<%= english %>
