Better JS, new placeholder

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -113,7 +113,7 @@
                   %strong
                     DEV
               %li.pull-right
-                %input#header_search{type: "text", placeholder: "Search the data or find a project..."}
+                %input#header_search{type: "text", placeholder: "Search the site or find a project..."}
         - if current_user_is_aiddata
           %div.row-fluid
             %nav.span12
