--- a/app/views/layouts/_templates.html.haml
+++ b/app/views/layouts/_templates.html.haml
@@ -7,7 +7,7 @@
 			| 
 			%span.muted
 				<% if (type=='Content') { %>
-				Site content
+				Web Page
 				<% } else { %>
 				<%= type %> #<%= value %>
 				<% } %>
