Another go with the JS

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -489,15 +489,16 @@ label {
   margin: 4px;
   min-width: 300px;
   max-width: 350px;
-}
-.twitter-typeahead .tt-query,
-.twitter-typeahead .tt-hint {
-  margin-bottom: 0;
-  padding: 0;
+  
+  .tt-query, .tt-hint {
+    margin-bottom: 0;
+    padding: 0;
+  }
 }
 
 .tt-dropdown-menu {
   min-width: 300px;
+  max-width: 350px;
   margin-top: 2px;
   padding: 5px 0;
   background-color: #fff;
@@ -523,23 +524,24 @@ label {
   padding: 3px 20px;
   line-height: 13px;
   font-size: 12px;
+  overflow-x: hidden;
+    p {
+      margin: 0;
+    }
 
-  &.tt-is-under-cursor {
-    color: #fff;
-    background-color: $aiddataBlue;
-    background-image: -moz-linear-gradient(top, $aiddataBlue, $aiddataBlue);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from($aiddataBlue), to($aiddataBlue));
-    background-image: -webkit-linear-gradient(top, $aiddataBlue, $aiddataBlue);
-    background-image: -o-linear-gradient(top, $aiddataBlue, $aiddataBlue);
-    background-image: linear-gradient(to bottom, $aiddataBlue, $aiddataBlue);
-    background-repeat: repeat-x;
-  }
+    &.tt-is-under-cursor {
+      color: #fff;
+      background-color: $aiddataBlue;
+      background-image: -moz-linear-gradient(top, $aiddataBlue, $aiddataBlue);
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from($aiddataBlue), to($aiddataBlue));
+      background-image: -webkit-linear-gradient(top, $aiddataBlue, $aiddataBlue);
+      background-image: -o-linear-gradient(top, $aiddataBlue, $aiddataBlue);
+      background-image: linear-gradient(to bottom, $aiddataBlue, $aiddataBlue);
+      background-repeat: repeat-x;
+        a {
+          color: #fff;
+        }
+
+    }
 }
 
-.tt-suggestion.tt-is-under-cursor a {
-  color: #fff;
-}
-
-.tt-suggestion p {
-  margin: 0;
-}
