--- a/app/views/projects/_search_result.html.erb
+++ b/app/views/projects/_search_result.html.erb
@@ -1,19 +1,19 @@
 <%# encoding: utf-8 %>
-<% cache "projects/#{p.id}/search_result/#{current_user_is_aiddata ? "aiddata" : "non_aiddata" }" do %>
+<% cache "projects/#{search_result.id}/search_result/#{current_user_is_aiddata ? "aiddata" : "non_aiddata" }" do %>
 	<tr>
-		<td><%= p.id %> </td>
-		<td><%= p.donor ? p.donor.name : '—' %> </td>
-		<td><%= link_to active_or_inactive(p), p %></td> 
-		<td><%= p.year ? p.year : '—' %></td>
-		<td><%= p.country_name.length>0 ? p.country_name.join(', ') : '—' %></td>
-		<td><%= p.usd_2009 ? "$#{number_with_precision(p.usd_2009, :precision => 2, :delimiter => ',')}" : '—' %></td>
+		<td><%= search_result.id %> </td>
+		<td><%= search_result.donor ? search_result.donor.name : '—' %> </td>
+		<td><%= link_to active_or_inactive(search_result), search_result %></td> 
+		<td><%= search_result.year ? search_result.year : '—' %></td>
+		<td><%= search_result.country_name.length>0 ? search_result.country_name.join(', ') : '—' %></td>
+		<td><%= search_result.usd_2009 ? "$#{number_with_precision(search_result.usd_2009, :precision => 2, :delimiter => ',')}" : '—' %></td>
 		<% if current_user && current_user.owner %>
 			<td>
-				<% if p.owner %>
-					<% if p.owner == current_user.owner %>
-						<%= link_to "Edit", edit_project_path(p) %>
+				<% if search_result.owner %>
+					<% if search_result.owner == current_user.owner %>
+						<%= link_to "Edit", edit_project_path(search_result) %>
 					<% else %>
-						Owner: <%= link_to p.owner.name, p.owner %> 
+						Owner: <%= link_to search_result.owner.name, search_result.owner %> 
 					<% end %>
 				<% else %>
 					No owner 
