Projects#index to HAML

--- a/app/views/projects/_search_scope.html.erb
+++ b/app/views/projects/_search_scope.html.erb
@@ -1,5 +1,22 @@
 <% 
-	
+	@scope_names = params[:scope_names]
+	# force it to be an array
+	if @scope_names.present? && !@scope_names.is_a?(Array)
+		@scope_names = [@scope_names]
+	end
+
+	if @scope_names.present? 
+		if @scope_names.include?("Official Finance")
+			flash.now[:success] =  
+				"You are viewing <b>#{
+					@scope_names.map {|s| Scope.find_by_name(s).name}.to_sentence
+					}</b>. Click the filters below to change your settings.".html_safe 
+		end
+		if (incomplete_scopes = @scope_names.select {|s| s != "Official Finance" }).length > 0
+			flash.now[:notice] = "Data for #{incomplete_scopes.map {|s| "<strong>#{s}</strong>"}.to_sentence } are not comprehensive, please see the #{link_to "methodology", content_by_name_path("methodology")} for details."
+		end
+	end
+		
 	def scope_to(scope)
 		scope_link = "#{link_to scope.name, @current_url_without_scope + @joiner + 'scope_names%5B%5D=' + scope.name}"
 		
