--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -68,7 +68,7 @@
 	function update_all_check_counts() {
 		#{
 		js = ""
-		 (FACETS + WORKFLOW_FACETS).each do |f| 
+		 (ProjectSearch::FACETS + ProjectSearch::WORKFLOW_FACETS).each do |f| 
 			js << "update_check_counter_for('#{f[:sym].to_s}');" 
 		end 
 		js.html_safe
