--- a/app/views/projects/_search_result.html.erb
+++ b/app/views/projects/_search_result.html.erb
@@ -7,6 +7,11 @@
 		<td><%= search_result.year ? search_result.year : '—' %></td>
 		<td><%= search_result.country_name.length>0 ? search_result.country_name.join(', ') : '—' %></td>
 		<td><%= search_result.usd_2009 ? "$#{number_with_precision(search_result.usd_2009, :precision => 2, :delimiter => ',')}" : '—' %></td>
+		
+		<% if current_user_is_aiddata %>
+			<td> <%= search_result.updated_at %></td>
+		<% end %>
+
 		<% if current_user && current_user.owner %>
 			<td>
 				<% if search_result.owner %>
