Adds chinese name to content

--- a/app/views/shared/code_index.html.erb
+++ b/app/views/shared/code_index.html.erb
@@ -3,7 +3,7 @@
 
 
 
-<% hidden_attributes = ["created_at", "updated_at", "id", "color", "content"] %>
+<% hidden_attributes = ["created_at", "updated_at", "id", "color", "content", "chinese_content"] %>
 
 <h1 class='page-header'>
 	View all 
