--- a/app/views/contents/show_by_name.html.haml
+++ b/app/views/contents/show_by_name.html.haml
@@ -4,44 +4,50 @@
 
 
 
-.row-fluid
-	%h1.page-header{style: "overflow-y:auto;"}
-		.span10
-			= @content.name.titleize
-	
-		- if @content.chinese_content.present?
-			%small.span2{style: "height:30px;"}
-				%ul.nav.nav-tabs.inline
-					%li.pull-right
-						%a{href: "#zh", "data-toggle" => "tab"}
-							中文
-					%li.pull-right
-						%a{href: "#en", "data-toggle" => "tab"}
-							EN
+- if @content.chinese_content.present?
+	.row-fluid{style: "position:relative;"}
+		.span2.pull-right{style: "height:30px;position:absolute;right:5px;top:10px;"}
+			%ul.nav.nav-pills.inline
+				%li
+					%a{href: "#en", "data-toggle" => "tab"}
+						EN
+				%li
+					%a{href: "#zh", "data-toggle" => "tab"}
+						中文
 
-.row-fluid
-	.tab-content.span12.site_content{style: "margin: auto, auto;"}
 
-		#en.tab-pane.active
-			- if @content.content_type == "Complex Page"
-				- cache("content/#{@content.name}/{@content.updated_at}/en/#", expires_in: 1.minute ) do
-					#{eval(@content.content).html_safe}
-			- else
-				- cache("content/#{@content.name}/{@content.updated_at}/en", expires_in: 20.minutes ) do
-					= Markdown.new(@content.content).to_html.html_safe
-		- if @content.chinese_content.present?
-			#zh.tab-pane
+.tab-content.site_content{style: "margin: auto, auto;"}
+	#en.tab-pane.active
+		.row-fluid
+			%h1.page-header{style: "overflow-y:auto;"}
+				.span12
+					= @content.name.titleize
+		.row-fluid
+			.span12		
+				- if @content.content_type == "Complex Page"
+					- cache("content/#{@content.name}/{@content.updated_at}/en/#", expires_in: 1.minute ) do
+						#{eval(@content.content).html_safe}
+				- else
+					- cache("content/#{@content.name}/{@content.updated_at}/en", expires_in: 20.minutes ) do
+						= Markdown.new(@content.content).to_html.html_safe
+	- if @content.chinese_content.present?
+		#zh.tab-pane
+			.row-fluid
+				%h1.page-header{style: "overflow-y:auto;"}
+					.span12
+						= @content.chinese_name.titleize
+			.row-fluid
 				- cache("content/#{@content.name}/{@content.updated_at}/zh", expires_in: 20.minutes ) do
 					= Markdown.new(@content.chinese_content).to_html.html_safe			
 :javascript
 	// Javascript to enable link to tab
 	var url = document.location.toString();
 	if (url.match('#')) {
-	    $('.nav-tabs a[href=#'+url.split('#')[1]+']').tab('show') ;
+	    $('.nav-pills a[href=#'+url.split('#')[1]+']').tab('show') ;
 	} 
 
 	// Change hash for page-reload
-	$('.nav-tabs a').on('shown', function (e) {
+	$('.nav-pills a').on('shown', function (e) {
 		new_hash = e.target.hash;
 
 		if(history.pushState) {
