--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico?v=1" />
+    <meta property="wb:webmaster" content="13f9821d72af83c1" />
     <title>AidData | <%= yield(:title) %></title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag   "application" %>
