Added link for weibo login

--- a/app/views/static_pages/_social_media_logins.html.haml
+++ b/app/views/static_pages/_social_media_logins.html.haml
@@ -26,4 +26,6 @@
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/google_oauth2", style: "background-image: url('#{image_path('google.png')}')"}
         -# image_tag "google.png"
         -# %h3.center Google
+    %li.span3
+      %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/weibo"} -#style: "background-image: url('#{image_path('google.png')}')"}
 
