--- a/app/views/static_pages/_social_media_logins.html.haml
+++ b/app/views/static_pages/_social_media_logins.html.haml
@@ -9,23 +9,22 @@
     in the database. Please use one of these networks to sign in:
 .row-fluid
   %ul.thumbnails
-    %li.span3
+    %li.span2
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/facebook", style: "background-image: url('#{image_path('facebook.png')}')"}
         -# image_tag "facebook.png"
         -# %h3.center Facebook
 
-    %li.span3
+    %li.span2
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/linkedin", style: "background-image: url('#{image_path('linkedin.png')}')"}
         -# image_tag "linkedin.png"
         -# %h3.center Linked In
-    %li.span3
+    %li.span2
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/twitter", style: "background-image: url('#{image_path('twitter.png')}')"}
         -# image_tag "twitter.png"
         -# %h3.center Twitter
-    %li.span3
+    %li.span2
       %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/google_oauth2", style: "background-image: url('#{image_path('google.png')}')"}
         -# image_tag "google.png"
         -# %h3.center Google
-    %li.span3
-      %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/weibo"} 
-
+    %li.span2
+      %a.thumbnail.social-thumbnail.with_shadow{href: "/auth/weibo", style: "background-image: url('#{image_path('weibo.png')}')"}
