Improves new_map

--- a/app/views/static_pages/new_map.html.haml
+++ b/app/views/static_pages/new_map.html.haml
@@ -5,7 +5,7 @@
 	China in Africa: 
 	%span.country_name
 		All Africa
-	
+	%small.country_detail
 
 = javascript_include_tag "miso/index"
 = javascript_include_tag "leaflet/index"
