--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -1,29 +1,9 @@
 
 .container-fluid
-  = simple_form_for(@resource) do |f|
+  = simple_form_for(resource) do |f|
     = f.error_notification
-
-    .row-fluid
-      .span3
-        = f.input :title, as: :string, placeholder: "Name of article, report or other document"
-      .span3
-        = f.input :authors, as: :string, placeholder: "Authors' names, A-Z order"
-      .span3
-        = f.input :source_url, as: :string, placeholder: "Where did you find this?", hint: "If it begins with <strong>http</strong>, we'll try to store a copy.".html_safe
-      .span3
-        = f.input :resource_type,  collection: Resource.resource_types
-    .row-fluid
-      .span3
-        = f.input :publisher, as: :string, placeholder: "Who supports this publication?"
-      .span3.row-fluid
-        = f.input :publish_date, as: :date, start_year: 1980, end_year: Date.today.year + 5, input_html: {class: "span4"}
-      .span3
-        = f.input :publisher_location, as: :string, placeholder: "Where is the publisher headquartered?"
-      .span3
-        = f.input :dont_fetch, label: "Don't fetch this resource", hint: "By default, we'll save a copy of this."
-    .row-fluid
-      .span6
-        =# f.association :projects, label_method: :to_english, value_method: :id
+    = f.simple_fields_for(resource) do |res|
+      = render 'fields', f: f
     .row-fluid
       %hr
     .row-fluid
