--- a/app/views/resources/new.html.haml
+++ b/app/views/resources/new.html.haml
@@ -1,3 +1,3 @@
 %h1.page-header New resource
-= render 'form'
+= render 'form', resource: @resource
 = link_to '&larr; Back'.html_safe, resources_path 
