--- a/app/views/resources/show.html.haml
+++ b/app/views/resources/show.html.haml
@@ -27,6 +27,10 @@
 						%strong
 							Source URL:
 						= link_to @resource.source_url, (@resource.source_url[0..6] == "http://" ? "" : "http://") + @resource.source_url
+					%li
+						%strong 
+							Resource type:
+						= @resource.resource_type
 			.span6
 				%h4 
 					Publisher:
