Index Async on production

--- a/app/views/projects/_resources_for_aiddata.html.haml
+++ b/app/views/projects/_resources_for_aiddata.html.haml
@@ -56,7 +56,7 @@
 			value = $(this).find('input').val()
 			parent = $(this).parent()
 			parent.attr("data-resource-id", value)
-			group.remove()
+			# group.remove()
 		)
 
 		$('#add_resource').click add_resource
