Confirm for unlink resource, hide inactive projects, allow search on Resource merge

--- a/app/views/projects/_fields_for_source.html.erb
+++ b/app/views/projects/_fields_for_source.html.erb
@@ -1,4 +1,4 @@
-<div class='fields row-fluid'>
+<div class='fields row-fluid' style="background-color:#faa">
 	<div class='row-fluid'>
 		<%= f.input :url, wrapper_html: {class: 'span9'}, input_html: { class: 'url-input'} %>
 		<div class='span2'>
