Require flag comment

--- a/app/views/projects/_project_flag_form.html.haml
+++ b/app/views/projects/_project_flag_form.html.haml
@@ -24,7 +24,7 @@
 						before being posted.
 						
 				%input{name: "flag[source]", placeholder: "Source URL"}
-				%textarea{name: "flag[comment]", placeholder: "Your message...", rows: 2}
+				%textarea{name: "flag[comment]", placeholder: "Your message... (required)", rows: 2}
 				%input.btn.btn-primary{type: "submit", value: "Submit"}
 		.modal-footer
 			%button.close{type: "button", "data-dismiss" => "modal"} &times;
