--- a/app/views/exports/show.html.erb
+++ b/app/views/exports/show.html.erb
@@ -50,7 +50,7 @@
     if (progress == 100){
       bar.parent().removeClass("active");
 
-      $("#centered_div_lower").append("check your email inbox for the export");
+      $("#centered_div_lower").append("Check your email inbox for the export!");
       
       <%# $(document.createElement("BUTTON")); %>
       <%# var $finished_button = document.createElement('a'); %>
